Serial # records now carry meta data about the cert * revoked - if toggled to 1, it means the serial number has been revoked * expiration - the expiration date of the associated certificate * collected - if the serial number record has been placed in the CRL
Both identity and entitlement certificates reference Serial # records